force-app/main/default/objects/PricebookEntry/fields/Special_Price_Description__c.field-meta.xml
<CustomField>
    <fullName>Special_Price_Description__c</fullName>
    <description>A description of the reason for the Special Price</description>
    <label>Special Price Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>