force-app/main/default/objects/PricebookEntry/fields/Supplier_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Product_Code__c</fullName>
    <label>Supplier Product Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>