force-app/main/default/objects/PricebookEntry/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <formula>Product2.AcctSeedERP__Default_Vendor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Name</label>
    <type>Text</type>
</CustomField>